# qsproteome-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: package-drift.yml  release.yml
src/qsproteome_cli/: cli.py  client.py  documentation.py  formatting.py  metadata.py  serve.py
tests/: test_cli.py
