[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qsproteome-cli"
version = "0.1.0"
description = "Command-line client for the documented QSProteome API"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "OpenAI Codex" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.urls]
Homepage = "https://github.com/decent-tools-for-thought/qsproteome-cli"
Repository = "https://github.com/decent-tools-for-thought/qsproteome-cli"
Issues = "https://github.com/decent-tools-for-thought/qsproteome-cli/issues"
Documentation = "https://qsproteome.org/api-usage"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.3",
]

[project.scripts]
qsproteome = "qsproteome_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
files = ["src/qsproteome_cli", "tests"]
strict = true
